<resources>
    <string name="app_name">Task Planner</string>
    <string name="title_todo">To Do</string>
    <string name="title_done">Done</string>
    <string name="title_today">Today</string>
    <string name="title_priority">Prior</string>
    <string name="title_expired">Expired</string>
    <string name="new_task">New task</string>
    <string name="new_list">New list</string>
    <string name="task_details">Task\'s Details</string>

    <string name="task_name">Name</string>
    <string name="task_list">List</string>
    <string name="task_date">Date</string>
    <string name="task_hour">Hour</string>
    <string name="task_prior">Priority</string>
    <string name="task_notes">Notes</string>
    <string name="task_father">Father</string>
    <string name="task_photo">Photo</string>

    <string name="no_name">No Name</string>
    <string name="no_list">No List</string>
    <string name="no_date">No Date</string>
    <string name="no_hour">No Hour</string>
    <string name="no_prior">No Priority</string>
    <string name="no_notes">No Notes</string>
    <string name="no_father">No Father</string>
    <string name="no_photo">No Photo</string>
    <string name="not_done">Not done</string>

</resources>
