<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_todo" />

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_priority"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_priority" />

    <item
        android:id="@+id/navigation_done"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_done" />

    <item
        android:id="@+id/navigation_expired"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_expired" />
</menu>
